# Probabilit-s-pour-le-Machine-Learning

./: README.md  main.py  pagerank_project_perfected.ipynb  pyproject.toml
PageRank/: pagerank_project.ipynb
REGRESSION/: Regression_gaussienne.ipynb  version_1.ipynb
REGRESSION/.ipynb_checkpoints/: version_1-checkpoint.ipynb
approximation gaussienne/: exercice_1.ipynb
