[project]
name = "probabilit-s-pour-le-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
